--- a/12_tensorboard.ipynb
+++ b/12_tensorboard.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -40,7 +40,7 @@
       "Starting run for lr_1E-05,conv=2,fc=2\n",
       "Starting run for lr_1E-05,conv=1,fc=2\n",
       "Starting run for lr_1E-05,conv=2,fc=1\n",
-      "Starting run for lr_1E-05,conv=1,fc=1"
+      "Starting run for lr_1E-05,conv=1,fc=1\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
     "## distributions\n",
     "\n",
     "distributionsは各パラメータの分布を見る事ができます。\n",
-    "バイアスや重みの変化度合いを確認できます。\n",
+    "バイアスや重みの動きを確認できます。\n",
     "\n",
     "## histograms\n",
     "\n",
