add random forest output

--- a/10_random_forest.ipynb
+++ b/10_random_forest.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -79,12 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start scanning default place access points 1 times.\n",
+      "scan 0\n",
+      "default place access points = {'30F772C78D8E-2G 30:f7:72:c7:8d:90': 116, 'aterm-935798-g c0:25:a2:9e:66:f3': 38, 'aterm-935798-a c0:25:a2:9e:66:f2': 28, '30F772C78D8E-5G 30:f7:72:c7:8d:91': 122, 'aterm-935798-gw c2:25:a2:9e:66:f3': 38, 'aterm-935798-aw c2:25:a2:9e:66:f2': 28}\n"
+     ]
+    }
+   ],
    "source": [
     "X, y = scan_access_points()\n",
     "for Xi, yi in zip(X, y):\n",
@@ -103,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -143,11 +153,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start scanning living room access points 10 times.\n",
+      "scan 0\n",
+      "scan 1\n",
+      "scan 2\n",
+      "scan 3\n",
+      "scan 4\n",
+      "scan 5\n",
+      "scan 6\n",
+      "scan 7\n",
+      "scan 8\n",
+      "scan 9\n"
+     ]
+    }
+   ],
    "source": [
     "_X, _y = scan_access_points(label='living room', size=10)\n",
     "X.extend(_X)\n",
@@ -163,11 +191,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start scanning bedroom room access points 10 times.\n",
+      "scan 0\n",
+      "scan 1\n",
+      "scan 2\n",
+      "scan 3\n",
+      "scan 4\n",
+      "scan 5\n",
+      "scan 6\n",
+      "scan 7\n",
+      "scan 8\n",
+      "scan 9\n"
+     ]
+    }
+   ],
    "source": [
     "_X, _y = scan_access_points(label='bedroom room', size=10)\n",
     "X.extend(_X)\n",
@@ -183,14 +230,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start scanning toilet access points 10 times.\n",
+      "scan 0\n",
+      "scan 1\n",
+      "scan 2\n",
+      "scan 3\n",
+      "scan 4\n",
+      "scan 5\n",
+      "scan 6\n",
+      "scan 7\n",
+      "scan 8\n",
+      "scan 9\n"
+     ]
+    }
+   ],
    "source": [
-    "_X, _y = scan_access_points(label='toilet', size=1)\n",
+    "_X, _y = scan_access_points(label='toilet', size=10)\n",
+    "X.extend(_X)\n",
+    "y.extend(_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "キッチンに移動して下記を実行します。もしくはlabelを書き換えてください。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start scanning kitchen access points 10 times.\n",
+      "scan 0\n",
+      "scan 1\n",
+      "scan 2\n",
+      "scan 3\n",
+      "scan 4\n",
+      "scan 5\n",
+      "scan 6\n",
+      "scan 7\n",
+      "scan 8\n",
+      "scan 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "_X, _y = scan_access_points(label='kitchen', size=10)\n",
     "X.extend(_X)\n",
     "y.extend(_y)"
    ]
@@ -204,11 +308,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('dictvectorizer', DictVectorizer(dtype=<class 'numpy.float64'>, separator='=', sort=True,\n",
+       "        sparse=False)), ('randomforestclassifier', RandomForestClassifier(bootstrap=True, class_weight='balanced',\n",
+       "            criterion='gini', max_depth=None, max_features='auto',\n",
+       "            max_leaf...n_jobs=1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False))])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.fit(X, y)"
    ]
@@ -222,11 +342,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bedroom room' 'kitchen' 'living room' 'toilet']\n"
+     ]
+    }
+   ],
    "source": [
     "place_names = model.classes_\n",
     "print(place_names)"
@@ -243,12 +371,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start scanning default place access points 1 times.\n",
+      "scan 0\n",
+      "living room\n"
+     ]
+    }
+   ],
    "source": [
     "X, _ = scan_access_points(size=1)\n",
     "place_name = model.predict(X[0])[0]\n",
@@ -266,16 +404,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start scanning default place access points 1 times.\n",
+      "scan 0\n",
+      "{'kitchen': 0.34999999999999998, 'toilet': 0.014, 'living room': 0.44400000000000001, 'bedroom room': 0.192}\n"
+     ]
+    }
+   ],
    "source": [
     "X, _ = scan_access_points(size=1)\n",
     "percentages = {x: y for x, y in zip(place_names, model.predict_proba(X[0])[0])}\n",
     "print(percentages)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
